--- a/src/ui/css/registration.css
+++ b/src/ui/css/registration.css
@@ -61,7 +61,7 @@
 }
 
 #register-form input {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 button {
@@ -112,4 +112,8 @@ textarea:focus {
   border-color: #03c9b2;
   outline: none;
   box-shadow: 0 0 10px rgba(3, 201, 178, 0.6);
+}
+
+a {
+  color: #00ffe1;
 }
